# Assisted-MindFlow

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  restart.bat  restart.sh  run-backend.bat  run-backend.sh  run-frontend.bat  run-frontend.sh  run_server.bat
.claude/: settings.local.json
.github/: FUNDING.yml
.specify/memory/: constitution.md
config/: config.example.json
data/: operations.db
data/canvases/: 41184988-862b-4bba-bbff-0e766ca9ac22.json  d7bc7e1e-4aa4-42d9-923c-c43b3486a382.json
docs/: architecture-plugin-nodes.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
migrations/: 2025-11-21_add_llm_operations_table.sql
specs/001-intelligent-reorganize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mindflow-engine/: clarifications-needed.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-node-canvas-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/003-node-editor-llm-orchestration/: spec.md
specs/004-advanced-canvas-features/: concurrent-llm-research.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-node-icon-customization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-node-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-concurrent-llm-hierarchy/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/008-llm-progress-indicators/: ARTIFACTS_MANIFEST.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-inline-llm-response/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-node-version-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-chatgpt-oauth-login/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-multi-provider-llm-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-mcp-client-support/: spec.md
specs/013-plugin-node-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-plugin-system-refonte/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mindflow/: __init__.py  mcp_server.py
tests/contract/: test_auth_endpoints.py  test_debate_contracts.py  test_mcp_client_contracts.py  test_provider_contracts.py
tests/integration/: test_mcp_server.py  test_providers_api.py
tests/unit/: test_comment_model.py  test_cycles.py  test_debate_engine.py  test_debate_model.py  test_graph_model.py  test_group_model.py  test_mcp_client_manager.py  test_mcp_connection_model.py  test_mcp_tools.py  test_node_model.py  test_node_version.py  test_oauth_service.py  test_openai_chatgpt_provider.py  test_provider_model.py  test_provider_registry.py  test_secret_storage.py  test_token_storage.py  test_tokens.py  (+1 more)
workbench/: demo_data.py
(+248 files in other folders)
